[gd_scene load_steps=10 format=2]

[ext_resource path="res://EnemyEngine/Enemy.gd" type="Script" id=1]
[ext_resource path="res://SFX/gun_shot_light.ogg" type="AudioStream" id=2]

[sub_resource type="CylinderShape" id=1]
radius = 1.3
height = 3.2

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 0.5, 0.5, 2 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CylinderMesh" id=6]
top_radius = 0.5
bottom_radius = 0.5
height = 0.001

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0, 0, 0, 1 )
metallic_specular = 0.0
emission_enabled = true
emission = Color( 0.937255, 1, 0, 1 )
emission_energy = 4.87
emission_operator = 0
emission_on_uv2 = false

[node name="Enemy" type="KinematicBody" groups=["Enemy"]]
script = ExtResource( 1 )
damage = 25.0
accuracy = 10.0

[node name="EnemyCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0.2 )
shape = SubResource( 1 )

[node name="Visuals" type="Spatial" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="BodyVisual" type="MeshInstance" parent="Visuals"]
transform = Transform( 1, 0, 0, 0, 0, -1, 0, 1, 0, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="GunVisual" type="MeshInstance" parent="Visuals"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.7, 0, 0.8 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="ShootCast" type="RayCast" parent="Visuals/GunVisual"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.57628e-07, 0, 1.1 )
enabled = true
cast_to = Vector3( 0, 0, -100 )

[node name="ShootTimer" type="Timer" parent="Visuals/GunVisual"]
one_shot = true

[node name="MuzzleFlash" type="MeshInstance" parent="Visuals/GunVisual"]
transform = Transform( 1, 8.74228e-08, 8.74228e-08, -8.74228e-08, -4.37114e-08, 1, 8.74228e-08, -1, -4.37114e-08, -1.78814e-07, 0, 1 )
visible = false
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="VisionCast" type="RayCast" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -1.1 )
enabled = true
cast_to = Vector3( 0, 0, 100 )

[node name="EnemyPos" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -11 )

[node name="MuzzleTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="SoundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[connection signal="timeout" from="Visuals/GunVisual/ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="MuzzleTimer" to="." method="_on_MuzzleTimer_timeout"]
